--- a/flex.css
+++ b/flex.css
@@ -1,89 +1,122 @@
 body {
-    background-color: black;
-    color: beige;
-    font-family:sa;
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
-  
-  .TopContainer {
-    height: 16vh;
-    display: flex;
-    justify-content:space-between;
-  }
-  
-  .Storm {
-    font-size: 4.5rem;
-    padding-top: 7px;
-    position: relative;
-    left: 1rem;
-    font-weight: normal;
-  }
-  .R {
-    font-size: 1.7rem;
-    border: 3px solid white;
-    height:1em;
-    width: 1em;
-    border-radius: 50%;
-    position: relative;
-    right:450px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 21px;
+  margin: 0 !important;
+  background-color: black;
+  color: beige;
+  font-family: "Mulish", sans-serif;
+}
 
-  }
-  
-  .Equal {
-    font-size: 5rem;
-    width: 10%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .Photo {
-    height: 50vh;
-    width: 100%;
-    display: flex;
-    gap: 3rem;
-  }
-  
-  .img1 {
-    width: 60%;
-    position: relative;
-    left: 1rem;
-  }
-  
-  .img2 {
-    width: 34%;
-  }
-  
-  .image1 {
-    width: 100%;
-    height: 100%;
-  }
-  .image2 {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .DownContainer {
-    height: 34vh;
-    display: flex;
-  }
-  
-  .Con1 {
-    width: 35%;
-  }
+.Nav-Container {
+  height: 16vh;
+  display: flex;
+  justify-content: space-between;
+}
 
-  
-  .T1 {
-    width: 97%;
-    height: 60%;
-    font-size: 2rem;
-    position: relative;
-    left: 1rem;
-    padding-top: 1rem;
-  }
-  
-  
+.logo {
+  width: 30%;
+  height: 100%;
+  display: flex;
+}
+.Storm {
+  font-size: 4.5rem;
+  padding-top: 7px;
+  position: relative;
+  left: 1rem;
+}
+.R {
+  font-size: 1.5rem;
+  border: 3px solid white;
+  height: 3.2vh;
+  width: 3.2vh;
+  border-radius: 50%;
+  transform: translateY(2rem);
+  position: relative;
+  left: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Equal {
+  font-size: 5rem;
+  width: 10%;
+  display: flex;
+  justify-content: center;
+}
+
+.Photo {
+  height: 50vh;
+  width: 100%;
+  display: flex;
+  gap: 3rem;
+}
+
+.pic1 {
+  width: 60%;
+  position: relative;
+  left: 1rem;
+}
+
+.pic2 {
+  width: 34%;
+}
+
+.image1 {
+  width: 100%;
+  height: 100%;
+}
+.image2 {
+  width: 100%;
+  height: 100%;
+}
+
+.Down-Container {
+  height: 34vh;
+  display: flex;
+}
+
+.Con1 {
+  width: 35%;
+}
+.Con2 {
+  width: 26%;
+  display: flex;
+  align-items: flex-end;
+}
+
+.Con3 {
+  width: 34%;
+  position: relative;
+  left: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.Title1 {
+  width: 97%;
+  height: 60%;
+  font-size: 2rem;
+  position: relative;
+  left: 1rem;
+  padding-top: 1rem;
+}
+
+.Title2 {
+  width: 90%;
+  height: 33%;
+  position: relative;
+  left: 1rem;
+  color: #f0f8ff93;
+}
+
+.Title3 {
+  height: 25%;
+  border-bottom: 1px solid #f0f8ff93;
+  display: flex;
+  align-items: center;
+}
+
+.Title {
+  position: relative;
+  left: 1rem;
+}
